feat: 게임추가 응답 API 스펙변경 로직적용